[optimisation] Allow FilteredExpr and Union expression context sequence to be optimised for ft:query